tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP71ErrorReportingTests#PHP71ErrorReportingTests(String[]).mjava
	public PHP71ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

